<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/navCategory"
            android:icon="@drawable/ic_list"
            android:title="@string/nav_category" />
        <item
            android:id="@+id/navMyAccount"
            android:icon="@drawable/ic_user"
            android:title="@string/nav_myaccount" />



    </group>
    <item android:title="">
    <menu>
        <group android:checkableBehavior="single">
        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_conversation"
            android:title="@string/faq" />

        </group>
    </menu>
    </item>
</menu>